--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html>
-
+    <head>
+        <meta charset="UTF-8">
+        <link type="text/css" rel= "stylesheet"  href="etl.css">
+        
+        <title> LOGIN </title>
+        
+    </head>
 <body>
 
 <h2>Tabla de datos</h2>
